# DBMS

./: CMakeLists.txt  README.md  analysissql.cpp  analysissql.h  config.json  createDatabase.cpp  createDatabase.h  createdatabase.cpp  createdatabase.h  createdatabase.ui  creattable.cpp  creattable.h  creattable.ui  dataoperation.cpp  dataoperation.h  dataoperation.ui  dbmanager.cpp  dbmanager.h  dbms.qrc  dbms.rcc  dbms2.sql  deletedatabase.cpp  deletedatabase.h  deletedatabase.ui  deletetable.cpp  deletetable.h  deletetable.ui  fieldmanager.cpp  fieldmanager.h  fieldmanager.ui  indexmanager.cpp  indexmanager.h  landing.cpp  landing.h  landing.ui  logdialog.cpp  logdialog.h  logdialog.ui  login.cpp  login.h  (+39 more)
CREATE/: createtable.cpp  createtable.h
DBMS/data/DBMS1/: DBMS1.db
DBMS/data/DBMS1/table/class/: class.tb  class.tdf  class.trd
DBMS/data/DBMS1/table/fruit/: fruit.tb  fruit.tdf  fruit.trd  privilege.txt
DBMS/data/DBMS1/table/student/: privilege.txt  snoindex.tid  student.tb  student.trd
DBMS/data/DBMS1/table/teacher/: teacher.tb
DBMS/data/DBMS2/: DBMS2.db  userprivilege.txt
DBMS/data/DBMS2/table/student/: student.tb  student.tdf  student.trd
DBMS/data/DBMS3/: DBMS3.db
DBMS/data/DBMS3/table/book/: book.tb  book.tdf  book.trd
DBMS/data/DBMS3/table/course/: course.tb  course.tdf  course.trd
DBMS/data/DBMS4/: DBMS4.db
DBMS/data/DBMS4/table/course/: course.tb  course.tdf  course.trd
DBMS/data/DBMS4/table/student/: student.tb  student.tdf  student.trd
DBMS/data/DBMS5/: DBMS5.db  userinfo.txt
DBMS/data/DBMS5/table/add/: add.tb  add.tdf  add.trd
DBMS/data/Database1/: userinfo.txt
DBMS/data/Database1/table/class/: class.tb  class.tdf  class.trd
DBMS/data/Database1/table/student/: student.tdf  student.trd
DBMS/data/Database1/table/teacher/: teacher.tdf
DBMS/data/sys/: alluser.txt  curuse.txt
DBMS/log/: sys.txt
data/sys/: curuse.txt
log/: sys.txt
